# libresolw

./: CMakeLists.txt  LICENSE  README.md
include/: resolv.h
include/resolw/: resolw_types.h
include/resolw/adhoc/nameser_h/arpa/: nameser.h
include/resolw/adhoc/netdb_h/: netdb.h
include/resolw/adhoc/sys/: endian.h
include/resolw/xxbsd/endian_h/sys/: endian.h
include/resolw/xxbsd/nameser_h/arpa/: nameser.h
include/resolw/xxbsd/netdb_h/: netdb.h
samples/: namequery.cpp
src/: dns.cpp  dns.h  err.cpp  nam.cpp  ndb.cpp  rnd.cpp
src/xxbsd/: res_comp.c
